Included chrome extension manifest file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <title>
     Test file
   </title>
-  <script type="text/javascript" src="test.js"></script>
+  <script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
+  <ul id="test">
 
+  </ul>
 </body>
 </html>
