Fixed bug in manifest and changed html filename

--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,10 @@
   <title>
     SearchSO
   </title>
-  <script type="text/javascript" src="test.js"></script>
+  <script type="text/javascript" src="popup.js"></script>
 </head>
 
-<body>
+<body style="min-width: 300px;">
 
   <h1>Search StackOverflow</h1>
 
@@ -20,13 +20,12 @@
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5</option>
+        <option value="5" selected="selected">5</option>
       </select>
       <button type="submit">Submit</button>
     </div>
   </form>
 
-  <ul id="test">
-  </ul>
+  <h4>Results: </h4>
+  <ul id="test"></ul>
 </body>
-</html>
