--- a/popup.html
+++ b/popup.html
@@ -2,19 +2,20 @@
 <html>
 <head>
   <script type="text/javascript" src="popup.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>
     SearchSO
   </title>
 </head>
 
-<body style="min-width: 300px;">
+<body>
 
   <h1>Search StackOverflow</h1>
 
   <form id="soQuery">
     <div>
-      <label for="searchQuery">Search:</label>
-      <input type="text" id="searchQuery" name="q">
+      <label for="searchQuery"><span id="searchLabel">Query:</span></label>
+      <input type="textarea" id="searchQuery" name="q" autocomplete="off">
       <select name="pagesize">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -26,7 +27,9 @@
     </div>
   </form>
 
-  <h4>Results: </h4>
-  <ul id="test"></ul>
+  <div id="results">
+  </div>
+
+
 </body>
 </html>
